--- a/flaskr/templates/jobs/home.html
+++ b/flaskr/templates/jobs/home.html
@@ -24,12 +24,14 @@
 {% endblock %}
 
 {% block header %}
+<style>
+  div.jobs-list {
+    padding-left: 500px;
+  }
+</style>
 {% endblock %}
 
 {% block content %}
-  <div>
-    <a href="{{ url_for('integrate.integrate') }}">Tích hợp dữ liệu</a>
-  </div>
   
   <div class="jobs-list" >
   {% for job in jobs %}
@@ -62,5 +64,16 @@
     {% endif %}
   
   {% endfor %}
+
   </div>
+  <br/>
+  <div>{{ page }}</div>
+  <form method="get" action="/home">
+    <label for="page_num">Số trang</label>
+    <input name="page_num" id="page_num" width="100" required>
+    <input type="submit" value="Go">
+    {% if text_s!=""%}
+    <input style="display: none;" type="text" name="search_text"  value = "{{text_s}}" >
+    {% endif %}
+  </form>
 {% endblock %}
